# bt-servant-signal-gateway

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml
qr_codes/: README.md
src/bt_signal_gateway/: __init__.py  __main__.py  app.py  callback_server.py  chunking.py  config.py  dedup.py  dispatch.py  engine_client.py  envelope.py  logging_config.py  media.py  signal_client.py  signal_listener.py  signal_rate_limit.py
tests/: test_app.py  test_callback_server.py  test_chunking.py  test_config.py  test_dedup.py  test_dispatch.py  test_engine_client.py  test_envelope.py  test_health.py  test_media.py  test_signal_client.py  test_signal_listener.py  test_signal_rate_limit.py
